--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -1,143 +1,66 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h3>Edit Device</h3>
-      <form [formGroup]="form" (ngSubmit)="submitForm()">
-        <div class="row">
-          <div class="col">
-            <div class="form-group mb-3">
-              <label for="id" class="form-label">Id</label>
-              <input
-                class="disabled"
-                type="text"
-                formControlName="id"
-                id="id"
-                readonly
-              />
-              <div
-                *ngIf="this.form.controls.id.errors"
-                class="invalid-feedback"
-              >
-                <div *ngIf="this.form.controls.id.errors.required">
-                  Id is required
-                </div>
-                <div *ngIf="this.form.controls.id.errors.minlength">
-                  Id must be at least 4 characters
-                </div>
-              </div>
-              <p>
-                Value: {{ form.value.id }} -
-                {{ this.form.controls.id.status }}
-              </p>
-            </div>
+  <div class="col-md-12">
+    <h3>Edit Device</h3>
+    <form [formGroup]="form" (ngSubmit)="submitForm()">
+      <div class="row">
+        <div class="col">
+          <label for="id" class="form-label">Id</label>
+          <input type="text" class="form-control" placeholder="Id" aria-label="id" formControlName="id" formControlName="id" id="id" readonly />
+          <div *ngIf="this.form.controls.id.errors" class="invalid-feedback">
+            <div *ngIf="this.form.controls.id.errors.required">Id is required</div>
+            <div *ngIf="this.form.controls.id.errors.minlength">Id must be at least 4 characters</div>
           </div>
-          <div class="col">
-            <div class="form-group mb-3">
-              <label for="name" class="form-label">Name</label>
-              <input
-                formControlName="name"
-                minlength="4"
-                id="name"
-                required
-                maxlength="255"
-              />
-              <div
-                *ngIf="this.form.controls.name.errors"
-                class="invalid-feedback"
-              >
-                <div *ngIf="this.form.controls.name.errors.required">
-                  Name is required
-                </div>
-                <div *ngIf="this.form.controls.name.errors.minlength">
-                  Name must be at least 4 characters
-                </div>
-              </div>
+        </div>
+        <div class="col">
+          <div class="form-group mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" placeholder="Name" aria-label="name" formControlName="name" minlength="4" id="name" required maxlength="255" />
+            <div *ngIf="this.form.controls.name.errors" class="invalid-feedback">
+              <div *ngIf="this.form.controls.name.errors.required">Name is required</div>
+              <div *ngIf="this.form.controls.name.errors.minlength">Name must be at least 4 characters</div>
             </div>
           </div>
         </div>
-        <div class="row" formGroupName="position">
-          <div class="col">
-            <div class="form-group mb-3">
-              <label for="x" class="form-label">x</label>
-              <input
-                type="text"
-                formControlName="x"
-                class="form-control"
-                id="x"
-                required
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group mb-3">
-              <label for="y" class="form-label">y</label>
-              <input
-                type="text"
-                formControlName="y"
-                class="form-control"
-                id="y"
-                required
-              />
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group mb-3">
-              <label for="h" class="form-label">h</label>
-              <input
-                type="text"
-                formControlName="h"
-                class="form-control"
-                id="h"
-                required
-              />
-            </div>
+      </div>
+      <div class="row" formGroupName="position">
+        <div class="col">
+          <div class="form-group mb-3">
+            <label for="x" class="form-label">x</label>
+            <input type="text" formControlName="x" class="form-control" id="x" required />
           </div>
         </div>
-        <div class="row">
-          <div class="col">
-            <div class="form-group mb-3">
-              <label for="model_id" class="form-label">Model</label>
-              <select
-                (change)="changeModel($event)"
-                formControlName="model_id"
-                class="form-control"
-                id="model_id"
-                required
-              >
-                <option
-                  *ngFor="let categoryObj of this.modelsList; let i = index"
-                >
-                  {{ categoryObj.name }}
-                </option>
-              </select>
-            </div>
+        <div class="col">
+          <div class="form-group mb-3">
+            <label for="y" class="form-label">y</label>
+            <input type="text" formControlName="y" class="form-control" id="y" required />
           </div>
         </div>
-        <div class="form-group mb-3">
-          <button
-            type="submit"
-            [disabled]="!(form.valid && form.touched)"
-            class="btn btn-primary"
-          >
-            Update
-          </button>
-          <div
-            *ngIf="!(form.valid && form.touched)"
-            class="-valid-feedback"
-          >
-            Form is invalid
+        <div class="col">
+          <div class="form-group mb-3">
+            <label for="h" class="form-label">h</label>
+            <input type="text" formControlName="h" class="form-control" id="h" required />
           </div>
-          <div
-            *ngIf="form.valid && form.touched"
-            class="-invalid-feedback"
-          >
-            Form is valid
-          </div>
-          <p>Form Status: {{ form.status }}</p>
-          <p>Form Values: {{ toString(form.value) }}</p>
         </div>
-      </form>
-    </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="form-group mb-3">
+            <label for="modelId" class="form-label">Model</label>
+            <select (change)="changeModel($event)" formControlName="modelId" class="form-control" id="modelId" required>
+              <option *ngFor="let modelObj of this.modelList; let i = index">
+                {{ modelObj.name }}
+              </option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="form-group mb-3">
+        <button type="submit" [disabled]="!(form.valid && form.touched)" class="btn btn-primary">Update</button>
+        <div *ngIf="!(form.valid && form.touched)" class="valid-feedback">Form is invalid</div>
+        <div *ngIf="form.valid && form.touched" class="invalid-feedback">Form is valid</div>
+        <p>Form Status: {{ form.status }} Values: {{ toString(form.value) }}</p>
+      </div>
+    </form>
   </div>
 </div>
 <app-log [component]="component"></app-log>
