--- a/src/app/components/connection/connection-list/connection-list.component.html
+++ b/src/app/components/connection/connection-list/connection-list.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="inner">
-        <h2>Connection</h2>
+        <h2>Connections</h2>
         <table class="table table-striped table-hover">
           <thead>
             <tr>
@@ -23,8 +23,18 @@
                       }
               ">
               <td tooltip="{{ connectionObj.id }}">{{ connectionObj.name }}</td>
-              <td>{{ connectionObj.deviceIdFrom }} {{ findDeviceName(connectionObj.deviceIdFrom) }}</td>
-              <td>{{ connectionObj.deviceIdTo }} {{ findDeviceName(connectionObj.deviceIdTo) }}</td>
+              <td>
+                <a href="/edit-device/{{ connectionObj.deviceIdFrom }}">
+                  <i class="bi bi-box"></i> {{ this.findDeviceName(connectionObj.deviceIdFrom) }}
+                </a>
+                <div class="deviceid">{{ connectionObj.deviceIdFrom }}</div>
+              </td>
+              <td>
+                <a href="/edit-device/{{ connectionObj.deviceIdTo }}">
+                  <i class="bi bi-box"></i> {{ this.findDeviceName(connectionObj.deviceIdTo) }}
+                </a>
+                <div class="deviceid">{{ connectionObj.deviceIdTo }}</div>
+              </td>
               <td>
                 <div class="btn-group" role="group" aria-label="connection-operations">
                   <button
