--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -1,23 +1,50 @@
 <div class="container">
   <div class="col-md-12">
     <h3>Edit Device</h3>
-    <form [formGroup]="form" (ngSubmit)="submitForm()">
+    <form [formGroup]="editDeviceForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
       <div class="row">
         <div class="col">
           <label for="id" class="form-label">Id</label>
-          <input type="text" class="form-control" placeholder="Id" aria-label="id" formControlName="id" formControlName="id" id="id" readonly />
-          <div *ngIf="this.form.controls.id.errors" class="invalid-feedback">
-            <div *ngIf="this.form.controls.id.errors.required">Id is required</div>
-            <div *ngIf="this.form.controls.id.errors.minlength">Id must be at least 4 characters</div>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Id"
+            aria-label="id"
+            formControlName="id"
+            formControlName="id"
+            id="id"
+            readonly
+            [ngClass]="{
+              'is-invalid': this.editDeviceForm.controls.id.status != 'VALID',
+              'is-valid': this.editDeviceForm.controls.id.status == 'VALID',
+              'form-control': true
+            }" />
+          <div *ngIf="this.editDeviceForm.controls.id.errors" class="invalid-feedback">
+            <div *ngIf="this.editDeviceForm.controls.id.errors.required">Id is required</div>
+            <div *ngIf="this.editDeviceForm.controls.id.errors.minlength">Id must be at least 4 characters</div>
           </div>
         </div>
         <div class="col">
           <div class="form-group mb-3">
             <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" placeholder="Name" aria-label="name" formControlName="name" minlength="4" id="name" required maxlength="255" />
-            <div *ngIf="this.form.controls.name.errors" class="invalid-feedback">
-              <div *ngIf="this.form.controls.name.errors.required">Name is required</div>
-              <div *ngIf="this.form.controls.name.errors.minlength">Name must be at least 4 characters</div>
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Device's name"
+              aria-label="name"
+              formControlName="name"
+              minlength="4"
+              id="name"
+              required
+              maxlength="255"
+              [ngClass]="{
+                'is-invalid': this.editDeviceForm.controls.name.status != 'VALID',
+                'is-valid': this.editDeviceForm.controls.name.status == 'VALID',
+                'form-control': true
+              }" />
+            <div *ngIf="this.editDeviceForm.controls.name.errors" class="invalid-feedback">
+              <div *ngIf="this.editDeviceForm.controls.name.errors.required">Name is required</div>
+              <div *ngIf="this.editDeviceForm.controls.name.errors.minlength">Name must be at least 4 characters</div>
             </div>
           </div>
         </div>
@@ -26,19 +53,49 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="x" class="form-label">x</label>
-            <input type="text" formControlName="x" class="form-control" id="x" required />
+            <input
+              type="text"
+              formControlName="x"
+              class="form-control"
+              id="x"
+              required
+              [ngClass]="{
+                'is-invalid': this.editDeviceForm.controls.position.controls.x.status != 'VALID',
+                'is-valid': this.editDeviceForm.controls.position.controls.x.status == 'VALID',
+                'form-control': true
+              }" />
           </div>
         </div>
         <div class="col">
           <div class="form-group mb-3">
             <label for="y" class="form-label">y</label>
-            <input type="text" formControlName="y" class="form-control" id="y" required />
+            <input
+              type="text"
+              formControlName="y"
+              class="form-control"
+              id="y"
+              required
+              [ngClass]="{
+                'is-invalid': this.editDeviceForm.controls.position.controls.y.status != 'VALID',
+                'is-valid': this.editDeviceForm.controls.position.controls.y.status == 'VALID',
+                'form-control': true
+              }" />
           </div>
         </div>
         <div class="col">
           <div class="form-group mb-3">
             <label for="h" class="form-label">h</label>
-            <input type="text" formControlName="h" class="form-control" id="h" required />
+            <input
+              type="text"
+              formControlName="h"
+              class="form-control"
+              id="h"
+              required
+              [ngClass]="{
+                'is-invalid': this.editDeviceForm.controls.position.controls.h.status != 'VALID',
+                'is-valid': this.editDeviceForm.controls.position.controls.h.status == 'VALID',
+                'form-control': true
+              }" />
           </div>
         </div>
       </div>
@@ -46,7 +103,17 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="modelId" class="form-label">Model</label>
-            <select (change)="changeModelId($event)" formControlName="modelId" class="form-control" id="modelId" required>
+            <select
+              (change)="changeModelId($event)"
+              formControlName="modelId"
+              class="form-control"
+              id="modelId"
+              required
+              [ngClass]="{
+                'is-invalid': this.editDeviceForm.controls.modelId.status != 'VALID',
+                'is-valid': this.editDeviceForm.controls.modelId.status == 'VALID',
+                'form-select': true
+              }">
               <option *ngFor="let modelObj of this.modelList; let i = index" value="{{ modelObj.id }}">
                 {{ modelObj.name }}
               </option>
@@ -55,11 +122,23 @@
         </div>
       </div>
       <div class="form-group mb-3">
-        <button type="submit" [disabled]="!(form.valid && form.touched)" class="btn btn-primary">Update</button>
-        <div *ngIf="!(form.valid && form.touched)" class="valid-feedback">Form is invalid</div>
-        <div *ngIf="form.valid && form.touched" class="invalid-feedback">Form is valid</div>
-        <p>Form Status: {{ form.status }} Values: {{ toString(form.value) }}</p>
-        <p>{{ action }}</p>
+        <button
+          type="submit"
+          [disabled]="!(editDeviceForm.valid && editDeviceForm.touched)"
+          class="btn btn-primary"
+          [ngClass]="{
+            'is-invalid': !(editDeviceForm.valid && editDeviceForm.touched),
+            'is-valid': (editDeviceForm.valid && editDeviceForm.touched),
+            'form-control': true
+          }">
+          Update
+        </button>
+        <div *ngIf="!(editDeviceForm.invalid && editDeviceForm.touched)" class="invalid-feedback">
+          editDeviceForm is invalid or untouched
+        </div>
+        <div *ngIf="!(editDeviceForm.valid && editDeviceForm.touched)" class="valid-feedback">
+          editDeviceForm is valid and touched
+        </div>
       </div>
     </form>
   </div>
