--- a/src/app/components/connection/add-connection/add-connection.component.html
+++ b/src/app/components/connection/add-connection/add-connection.component.html
@@ -9,20 +9,26 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="name" class="form-label">Name</label>
-              <input formControlName="name" id="name" class="form-control" value="{{ this.addConnectionForm.value.name }}">
+              <input
+                formControlName="name"
+                id="name"
+                [ngClass]="{
+                  'is-invalid': this.addConnectionForm.controls.name.status != 'VALID',
+                  'is-valid': this.addConnectionForm.controls.name.status == 'VALID',
+                  'form-control': true
+                }"
+                value="{{ this.addConnectionForm.value.name }}" />
               <div *ngIf="addConnectionForm.get('name')?.invalid">
-                <div *ngIf="addConnectionForm.get('name')?.errors?.['required']">
-                  Name is required.
-                </div>
+                <div *ngIf="addConnectionForm.get('name')?.errors?.['required']">Name is required.</div>
                 <div *ngIf="addConnectionForm.get('name')?.errors?.['minlength']">
                   Name must be at least 6 characters long.
                 </div>
               </div>
-              <div *ngIf="(
-                addConnectionForm.get('name')?.dirty ||
-                addConnectionForm.get('name')?.touched
-               ) &&
-               addConnectionForm.get('name')?.invalid">
+              <div
+                *ngIf="
+                  (addConnectionForm.get('name')?.dirty || addConnectionForm.get('name')?.touched) &&
+                  addConnectionForm.get('name')?.invalid
+                ">
                 Please provide connection name.
               </div>
             </div>
@@ -32,20 +38,34 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="deviceIdFrom" class="form-label">Device From</label>
-              <select (change)="changeDeviceFrom($event)" formControlName="deviceIdFrom" class="form-control" id="deviceIdFrom">
+              <select
+                (change)="changeDeviceFrom($event)"
+                formControlName="deviceIdFrom"
+                [ngClass]="{
+                  'is-invalid': this.addConnectionForm.controls.deviceIdFrom.status != 'VALID',
+                  'is-valid': this.addConnectionForm.controls.deviceIdFrom.status == 'VALID',
+                  'form-select': true
+                }"
+                id="deviceIdFrom">
                 <option *ngFor="let deviceFromObj of deviceList; let i = index" [value]="deviceFromObj.id">
                   {{ deviceFromObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.addConnectionForm.get('deviceIdFrom')?.invalid">
-                Device Id From is required
-              </div>
+              <div *ngIf="this.addConnectionForm.get('deviceIdFrom')?.invalid">Device Id From is required</div>
             </div>
           </div>
           <div class="col">
             <div class="form-group mb-3">
               <label for="deviceIdTo" class="form-label">Device To</label>
-              <select (change)="changeDeviceTo($event)" formControlName="deviceIdTo" class="form-control" id="deviceIdTo">
+              <select
+                (change)="changeDeviceTo($event)"
+                formControlName="deviceIdTo"
+                [ngClass]="{
+                  'is-invalid': this.addConnectionForm.controls.deviceIdTo.status != 'VALID',
+                  'is-valid': this.addConnectionForm.controls.deviceIdTo.status == 'VALID',
+                  'form-select': true
+                }"
+                id="deviceIdTo">
                 <option *ngFor="let deviceToObj of deviceList; let i = index" [value]="deviceToObj.id">
                   {{ deviceToObj.name }}
                 </option>
@@ -60,7 +80,9 @@
           </div>
         </div>
         <div class="form-group mb-3">
-          <button type="submit" [disabled]="!(this.addConnectionForm.valid && this.addConnectionForm.touched)"
+          <button
+            type="submit"
+            [disabled]="!(this.addConnectionForm.valid && this.addConnectionForm.touched)"
             class="btn btn-primary">
             <i class="bi bi-plus-square"></i> Add connection
           </button>
