--- a/src/app/components/devices/add-device/add-device.component.html
+++ b/src/app/components/devices/add-device/add-device.component.html
@@ -2,30 +2,22 @@
   <div class="row">
     <div class="col-md-12">
       <h3>Add Device</h3>
-      <form
-        [formGroup]="addForm"
-        (ngSubmit)="submitForm()"
-        class="g-3 needs-validation"
-        novalidate
-      >
+      <form [formGroup]="addDeviceForm" (ngSubmit)="submitForm()" class="g-3 needs-validation" novalidate>
         <div class="form-group mb-3">
           <label>Id</label>
           <input
             type="text"
             formControlName="id"
             [ngClass]="{
-              'is-invalid': this.addForm.controls.id.status != 'VALID',
+              'is-invalid': this.addDeviceForm.controls.id.status != 'VALID',
               'form-control': true
             }"
             maxlength="20"
             minlength="4"
-            required
-          />
+            required />
           <div *ngIf="f.id.errors" class="invalid-feedback">
             <div *ngIf="f.id.errors.required">Id is required</div>
-            <div *ngIf="f.id.errors.minlength">
-              Id must be at least 4 characters
-            </div>
+            <div *ngIf="f.id.errors.minlength">Id must be at least 4 characters</div>
           </div>
           <div class="valid-feedback">Looks good!</div>
         </div>
@@ -33,84 +25,88 @@
         <div class="form-group mb-3">
           <label>Name</label>
           <textarea
-            [ngClass]="{
-              'is-invalid': this.addForm.controls.name.status != 'VALID',
-              'form-control': true
-            }"
             formControlName="name"
             rows="2"
             minlength="4"
             maxlength="50"
             required
-          ></textarea>
-          <div
-            *ngIf="this.addForm.controls.name.errors"
-            class="invalid-feedback"
-          >
-            <div *ngIf="this.addForm.controls.name.errors.required">
-              Id is required
-            </div>
-            <div *ngIf="this.addForm.controls.name.errors.minlength">
-              Id must be at least 4 characters
-            </div>
+              [ngClass]="{
+                'is-invalid': this.addDeviceForm.controls.name.status != 'VALID',
+                'is-valid': this.addDeviceForm.controls.name.status == 'VALID',
+                'form-select': true
+              }"></textarea>
+          <div *ngIf="this.addDeviceForm.controls.name.errors" class="invalid-feedback">
+            <div *ngIf="this.addDeviceForm.controls.name.errors.required">Name is required</div>
+            <div *ngIf="this.addDeviceForm.controls.name.errors.minlength">Name must be at least 4 characters</div>
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" formGroupName="position">
           <div class="col">
             <div class="form-group mb-3">
-              <label>Type</label>
-              <select
-                (change)="changeType($event)"
-                formControlName="type"
-                id="type"
-                class="form-select"
-                aria-label="type"
-              >
-                <option></option>
-                <option *ngFor="let data of deviceTypeDict.list; let i = index">
-                  {{ data.name }}
-                </option>
-              </select>
-              <div class="invalid-feedback">Please provide a valid type.</div>
-              <!-- error block -->
-              <div
-                class="invalid-feedback"
-                *ngIf="isSubmitted && addForm.get('type')?.hasError"
-              >
-                <sup>*</sup>Please provide Type name
-              </div>
+              <label for="x" class="form-label">x</label>
+              <input
+                type="text"
+                formControlName="x"
+                class="form-control"
+                id="x"
+                required
+                [ngClass]="{
+                  'is-invalid': this.addDeviceForm.controls.x.status != 'VALID',
+                  'is-valid': this.addDeviceForm.controls.x.status == 'VALID',
+                  'form-control': true
+                }" />
+                <div *ngIf="this.addDeviceForm.controls.x.errors" class="invalid-feedback">
+                  <div *ngIf="this.addDeviceForm.controls.x.errors.required">X is required</div>
+                  <div *ngIf="this.addDeviceForm.controls.x.errors.minlength">X must be at least 1 characters</div>
+                </div>
             </div>
           </div>
           <div class="col">
             <div class="form-group mb-3">
-              <label>Category</label>
-              <select
-                (change)="changeCategory($event)"
-                formControlName="category"
-                id="category"
-                class="form-select"
-                aria-label="category"
-              >
-                <option></option>
-                <option
-                  *ngFor="let data of deviceCategoryDict.list; let i = index"
-                >
-                  {{ data.name }}
-                </option>
-              </select>
+              <label for="y" class="form-label">y</label>
+              <input
+                type="text"
+                formControlName="y"
+                class="form-control"
+                id="y"
+                required
+                [ngClass]="{
+                  'is-invalid': this.addDeviceForm.controls.y.status != 'VALID',
+                  'is-valid': this.addDeviceForm.controls.y.status == 'VALID',
+                  'form-control': true
+                }" />
+                <div *ngIf="this.addDeviceForm.controls.y.errors" class="invalid-feedback">
+                  <div *ngIf="this.addDeviceForm.controls.y.errors.required">Y is required</div>
+                  <div *ngIf="this.addDeviceForm.controls.y.errors.minlength">Y must be at least 1 characters</div>
+                </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="h" class="form-label">h</label>
+              <input
+                type="text"
+                formControlName="h"
+                class="form-control"
+                id="h"
+                required
+                [ngClass]="{
+                  'is-invalid': this.addDeviceForm.controls.h.status != 'VALID',
+                  'is-valid': this.addDeviceForm.controls.h.status == 'VALID',
+                  'form-control': true
+                }" />
+                <div *ngIf="this.addDeviceForm.controls.h.errors" class="invalid-feedback">
+                  <div *ngIf="this.addDeviceForm.controls.h.errors.required">H is required</div>
+                  <div *ngIf="this.addDeviceForm.controls.h.errors.minlength">H must be at least 1 characters</div>
+                </div>
             </div>
           </div>
         </div>
-
-        <p>Form Status: {{ addForm.status }}</p>
-        <p>Form Values: {{ toString(addForm.value) }}</p>
+        <p>Form Status: {{ addDeviceForm.status }}</p>
+        <!-- <p>Form Values: {{ toString(addDeviceForm.value) }}</p> -->
         <div class="form-group mb-3">
-          <button
-            type="submit"
-            [disabled]="!(addForm.valid && addForm.touched)"
-            class="btn btn-primary mb-3"
-          >
+          <button type="submit" [disabled]="!(addDeviceForm.valid && addDeviceForm.touched)" class="btn btn-primary mb-3">
             Submit
           </button>
         </div>
