--- a/src/app/components/devices/add-device/add-device.component.html
+++ b/src/app/components/devices/add-device/add-device.component.html
@@ -1,22 +1,16 @@
 <div class="container">
   <h3><i class="bi bi-hdd"></i> Add Device</h3>
   <form [formGroup]="addDeviceForm" (ngSubmit)="submitForm()" class="g-3 needs-validation" novalidate>
-    <div class="form-group mb-3">
-      <label>Id</label>
-      <input type="text" formControlName="id" [ngClass]="{
-          'is-invalid': this.addDeviceForm.controls.id.status != 'VALID',
-          'form-control': true
-        }" maxlength="20" minlength="4" required />
-      <div *ngIf="f.id.errors" class="invalid-feedback">
-        <div *ngIf="f.id.errors.required">Id is required</div>
-        <div *ngIf="f.id.errors.minlength">Id must be at least 4 characters</div>
-      </div>
-      <div class="valid-feedback">Looks good!</div>
-    </div>
-
+    <label>Id {{ this.addDeviceForm.controls.id.value }}</label>
     <div class="form-group mb-3">
       <label>Name</label>
-      <textarea formControlName="name" rows="2" minlength="4" maxlength="50" required [ngClass]="{
+      <textarea
+        formControlName="name"
+        rows="2"
+        minlength="4"
+        maxlength="50"
+        required
+        [ngClass]="{
           'is-invalid': this.addDeviceForm.controls.name.status != 'VALID',
           'is-valid': this.addDeviceForm.controls.name.status == 'VALID',
           'form-select': true
@@ -31,14 +25,20 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="x" class="form-label">x</label>
-            <input type="text" formControlName="x" id="x" required [ngClass]="{
-              'is-invalid': this.addDeviceForm.controls.position.controls.x.status != 'VALID',
-              'is-valid': this.addDeviceForm.controls.position.controls.x.status == 'VALID',
-              'form-control': true
-            }" />
+            <input
+              type="text"
+              formControlName="x"
+              id="x"
+              required
+              [ngClass]="{
+                'is-invalid': this.addDeviceForm.controls.position.controls.x.status != 'VALID',
+                'is-valid': this.addDeviceForm.controls.position.controls.x.status == 'VALID',
+                'form-control': true
+              }" />
             <div *ngIf="this.addDeviceForm.controls.position.controls.x.errors" class="invalid-feedback">
               <div *ngIf="this.addDeviceForm.controls.position.controls.x.errors.required">X is required</div>
-              <div *ngIf="this.addDeviceForm.controls.position.controls.x.errors.minlength">X must be at least 1 characters
+              <div *ngIf="this.addDeviceForm.controls.position.controls.x.errors.minlength">
+                X must be at least 1 characters
               </div>
             </div>
           </div>
@@ -46,28 +46,42 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="y" class="form-label">y</label>
-            <input type="text" formControlName="y" id="y" required [ngClass]="{
-              'is-invalid': this.addDeviceForm.controls.position.controls.y.status != 'VALID',
-              'is-valid': this.addDeviceForm.controls.position.controls.y.status == 'VALID',
-              'form-control': true
-            }" />
+            <input
+              type="text"
+              formControlName="y"
+              id="y"
+              required
+              [ngClass]="{
+                'is-invalid': this.addDeviceForm.controls.position.controls.y.status != 'VALID',
+                'is-valid': this.addDeviceForm.controls.position.controls.y.status == 'VALID',
+                'form-control': true
+              }" />
             <div *ngIf="this.addDeviceForm.controls.position.controls.y.errors" class="invalid-feedback">
               <div *ngIf="this.addDeviceForm.controls.position.controls.y.errors.required">Y is required</div>
-              <div *ngIf="this.addDeviceForm.controls.position.controls.y.errors.minlength">Y must be at least 1 characters</div>
+              <div *ngIf="this.addDeviceForm.controls.position.controls.y.errors.minlength">
+                Y must be at least 1 characters
+              </div>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="form-group mb-3">
             <label for="h" class="form-label">h</label>
-            <input type="text" formControlName="h" id="h" required [ngClass]="{
-              'is-invalid': this.addDeviceForm.controls.position.controls.h.status != 'VALID',
-              'is-valid': this.addDeviceForm.controls.position.controls.h.status == 'VALID',
-              'form-control': true
-            }" />
+            <input
+              type="text"
+              formControlName="h"
+              id="h"
+              required
+              [ngClass]="{
+                'is-invalid': this.addDeviceForm.controls.position.controls.h.status != 'VALID',
+                'is-valid': this.addDeviceForm.controls.position.controls.h.status == 'VALID',
+                'form-control': true
+              }" />
             <div *ngIf="this.addDeviceForm.controls.position.controls.h.errors" class="invalid-feedback">
               <div *ngIf="this.addDeviceForm.controls.position.controls.h.errors.required">H is required</div>
-              <div *ngIf="this.addDeviceForm.controls.position.controls.h.errors.minlength">H must be at least 1 characters</div>
+              <div *ngIf="this.addDeviceForm.controls.position.controls.h.errors.minlength">
+                H must be at least 1 characters
+              </div>
             </div>
           </div>
         </div>
@@ -77,8 +91,13 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="modelId" class="form-label">Model</label>
-          <select (change)="changeModelId($event)" formControlName="modelId" class="form-control" id="modelId"
-            required [ngClass]="{
+          <select
+            (change)="changeModelId($event)"
+            formControlName="modelId"
+            class="form-control"
+            id="modelId"
+            required
+            [ngClass]="{
               'is-invalid': this.addDeviceForm.controls.modelId.status != 'VALID',
               'is-valid': this.addDeviceForm.controls.modelId.status == 'VALID',
               'form-select': true
@@ -95,11 +114,17 @@
     </div>
     <p>Form Status: {{ addDeviceForm.status }}</p>
     <!-- <p>Form Values: {{ toString(addDeviceForm.value) }}</p> -->
-    <div class="form-group mb-3">
-      <button type="submit" [disabled]="!(addDeviceForm.valid && addDeviceForm.touched)"
-        class="btn btn-primary mb-3">
-        Submit
-      </button>
+    <div class="d-flex p-2">
+      <div class="p-1 g-col-1">
+        <button type="submit" [disabled]="!(addDeviceForm.valid && addDeviceForm.touched)" class="btn btn-primary mb-3">
+          Submit
+        </button>
+      </div>
+      <div class="p-1 g-col-1">
+        <button type="button" (click)="generateDevice()" class="btn btn-debug">
+          <i class="bi bi-bookmark-plus"></i> Generate random data
+        </button>
+      </div>
     </div>
   </form>
 </div>
