--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>3d inventory</title>
   <base href="/" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
 </head>
 
 <body class="d-grid">
