--- a/src/app/components/attribute/edit-attribute/edit-attribute.component.html
+++ b/src/app/components/attribute/edit-attribute/edit-attribute.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <h2><i class="bi bi-bar-chart"></i> Edit Attribute</h2>
-  <div>{{ this.toString(this.editAttributeForm.controls.id.value) }}</div>
+  <div>{{ this.toString(this.editAttributeForm.controls._id.value) }}</div>
   <form [formGroup]="editAttributeForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
     <div class="row">
       <div class="col">
